--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "bootstrap": "^5.3.0",
     "dayjs": "^1.11.9",
     "sass": "^1.64.1",
-    "vue": "^3.3.4"
+    "vue": "^3.3.4",
+    "vue-router": "^4.2.4"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.2.3",
