--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "bootstrap": "^5.3.0",
     "dayjs": "^1.11.9",
+    "pinia": "^2.1.6",
     "sass": "^1.64.1",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4"
