--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "pinia": "^2.1.6",
     "sass": "^1.64.1",
     "vue": "^3.3.4",
+    "vue-loading-overlay": "^6.0.3",
     "vue-router": "^4.2.4"
   },
   "devDependencies": {
