--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "aos": "^3.0.0-beta.6",
+    "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
     "dayjs": "^1.11.9",
     "pinia": "^2.1.6",
     "sass": "^1.64.1",
     "vue": "^3.3.4",
+    "vue-axios": "^3.5.2",
     "vue-loading-overlay": "^6.0.3",
     "vue-router": "^4.2.4"
   },
